Fix top margin for right aligned dropdowns

--- a/app/assets/stylesheets/framework/dropdowns.scss
+++ b/app/assets/stylesheets/framework/dropdowns.scss
@@ -485,7 +485,6 @@
 .dropdown-menu-align-right {
   left: auto;
   right: 0;
-  margin-top: 2px;
 }
 
 .dropdown-menu-selectable {
